[gd_scene load_steps=5 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://TestEnv/PlayerDetector.tscn" type="PackedScene" id=2]
[ext_resource path="res://TestEnv/GummyCrossbowman.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="GummyCrossbowman" type="KinematicBody2D"]
collision_mask = 2
script = ExtResource( 3 )

[node name="Body" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Collider" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Hand" type="Sprite" parent="."]
scale = Vector2( 1, 0.272853 )
texture = ExtResource( 1 )
offset = Vector2( 15, 0 )

[node name="BulletSpawnPos" type="Node2D" parent="Hand"]
position = Vector2( 46, 0 )

[node name="PlayerDetector" parent="." instance=ExtResource( 2 )]

[node name="AttackCooldown" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="timeout" from="AttackCooldown" to="." method="_on_AttackCooldown_timeout"]
